# AXIOM-Remote

./: .clang-format  .gitignore  .gitmodules  CodingGuidelines.md  GSOC_Draw2BitIcon.md  README.md  index.html
.circleci/: config.yml
.devcontainer/: devcontainer.json
AXIOM Remote Prototype V01/: FreeSans24pt7b.h  definitions.h  down-icon.c  draw.c  glcdfont.c  globals.h  main.c  main.h  menu.c  page.c  page_wb.c  page_wb_help.c  readme.md  up-icon-highlight.c  utility.c  utility.h
AXIOM Remote Prototype V01/media/: axiom-logo.c  back-icon-highlight.c  home-icon-highlight.c  trash-icon.c  wheel-illustration.c
AXIOM Remote Prototype V01/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
AXIOM Remote Prototype V01/reference/: demo.c  lcd_spi.c
AXIOM_Remote_3D_Visualizer/: README.md  package-lock.json  package.json  transpile_firmware.sh  transpile_firmware_ci.sh  webpack.config.js
AXIOM_Remote_3D_Visualizer/FirmwareBinder/: FirmwareBinder.cpp  FirmwareBinder.h
AXIOM_Remote_3D_Visualizer/Media/Graphics/: mouse buttons illustrations.psd
AXIOM_Remote_3D_Visualizer/src/: index.html
AXIOM_Remote_3D_Visualizer/src/css/: default.css
AXIOM_Remote_3D_Visualizer/src/js/: main.js
AXIOM_Remote_Firmware_Visualizer/: .clang-format  CMakeLists.txt  HelpersGL.cpp  HelpersGL.h  Main.cpp  README.md  USBCDCTerminalDevice.h  VirtualUI.cpp  VirtualUI.h  build.sh
AXIOM_Remote_Firmware_Visualizer/cmake/: FindSDL2.cmake  FindSDL2_image.cmake
AXIOM_Remote_Firmware_Visualizer/images/: knob_clean.psd
AXIOM_Remote_Firmware_Visualizer/imgui_modules/: imgui_user.h
AXIOM_Remote_Firmware_Visualizer/shaders/: camera_preview.frag  camera_preview.vert
AXIOM_Remote_Prototype_V01.X/: definitions.h  draw.c  draw.h  globals.c  globals.h  main.c  main.h  menu.c  menu.h  page.c  page.h  page_wb.c  page_wb.h  page_wb_help.c  page_wb_help.h  utility.h
AXIOM_Remote_Prototype_V01.X/media/: back-icon.c  down-icon-highlight.c  help-icon.c  media.h  up-icon.c
AXIOM_Remote_Prototype_V01.X/nbproject/: Makefile-default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-default.bash  configurations.xml  project.xml
Archive/AXIOM_Remote_Prototype_V01.X/: draw.c  draw.h  gfxfont.h  globals.c  globals.h  main.h  menu.c  menu.h  oop.h  page.c  page_wb.c  page_wb.h  page_wb_help.h
Archive/AXIOM_Remote_Prototype_V01.X/media/: home-icon.c
Archive/AXIOM_Remote_Prototype_V01.X/nbproject/: Makefile-genesis.properties  Package-default.bash
Archive/AXIOM_Remote_Prototype_V01.X/reference/: lcd.c
Archive/arduino prototype - outdated/: DictatorTest01.ino
Archive/axiom_remote_visualizer/: CMakeLists.txt
Bootloader/: .clang-format  Definitions.h  GlobalSettings.cpp  GlobalSettings.h  Helpers.h  Main.cpp  Makefile  README.md  procdefs_boot.ld
Bootloader/Configuration/: PIC32.h
Bootloader/Periphery/I2C/: I2C.h  I2CDefinitions.h
Bootloader/Periphery/ICSP/: ICSPDefinitions.h  ICSProgrammer.cpp  ICSProgrammer.h
Bootloader/Periphery/ILI9341/: ILI9341Device.cpp  ILI9341Device.h  ILI9341Display.cpp  ILI9341Display.h  LCDDefinitions.h
Bootloader/Periphery/UART/: UART.cpp  UART.h
Bootloader/Periphery/USB/: IUSBDevice.h  USBCDCDevice.cpp  USBCDCDevice.h  USBDefinitions.h
Common/: Definitions.h  Helpers.h  procdefs.ld  procdefs_common.ld
Docs/Images/Structure/: menu_illustration.xcf
Firmware/: Attribute.cpp  Attribute.h  CentralDB.cpp  CentralDB.h  CentralDBObserver.cpp  CentralDBObserver.h  ExceptionHandlers.cpp  GlobalSettings.cpp  GlobalSettings.h  Main.cpp  Makefile  NOTES.md  README.md  Utils.cpp  Utils.h  UtilsExtended.h  procdefs_app.ld
Firmware/CentralDB/: Attribute.h  CentralDB.cpp  CentralDB.h  CentralDBObserver.cpp  CentralDBObserver.h
Firmware/Media/Fonts/: FreeSans9pt7b.h  homework_font.h
Firmware/Media/Icons/: ApertusRingLogo.h  ApertusTextLogo.h  Attributions.md  Back_icon.xbm  Delete_icon.xbm  Down_icon.xbm  HelpIcon2Bit.h  Help_icon.xbm  HomeIcon2Bit.h  Home_icon.xbm  Makefile  README.md  RingLogo.xbm  TextLogo.xbm  Up_icon.xbm  back_icon.h  checkboxfalse_icon.h  checkboxtrue_icon.h  convert.sh  convert_xbm_to_h.sh  delete_icon.h  down_icon.h  help_icon.h  home_icon.h  home_icon2bit.h  icon_template.h  monoBack_icon.xbm  monoDelete_icon.xbm  monoDown_icon.xbm  monoHelp_icon.xbm  monoHome_icon.xbm  monoRingLogo.xbm  monoTextLogo.xbm  monoUp_icon.xbm  sample.h  up_icon.h
Firmware/Media/Images/: ApertusLogo.h  ApertusRing.h  ApertusText.h  convert.sh  monoText.xbm
Firmware/UI/: AnalogGainMenu.h  ButtonDefinitions.h  Color565.h  FontDefinitions.h  GFXFont.h  IButton.h  IMenu.h  IMenuSystem.h  IWidget.h  MainMenu.h  MainMenuButton.h  MainPage.h  MenuDefinitions.h  MenuSystem.cpp  MenuSystem.h  Painter.cpp  Painter.h  Utils.h
Firmware/UI/Painter/: DebugPainter.h  IDebugPainter.h  IPainter.h  Painter.cpp  Painter.h  PainterDecorator.h
Firmware/UI/Screens/: AnalogGainMenu.h  IMenu.h  IScreen.cpp  IScreen.h  MainMenu.cpp  MainMenu.h  MainPage.cpp  MainPage.h  Menu.cpp  Menu.h  NumericValueScreen.cpp  NumericValueScreen.h  ParameterListScreen.cpp  (+6 more)
FirmwareTest/: CMakeLists.txt  CentralDBObserverTest.cpp  Main.cpp  MenuSystemTest.cpp  PainterMod.h  PainterTest.cpp  README.md
FirmwareTest/Images/: LogoIcon.h  LogoIconOutput.h  Test2BitLine.h  Test2BitLineOutput.h  logo.h  logo_output.h  monoLogo.xbm  test_2_bit_line.h  test_2_bit_line_output.h
HTML-Simulator/: index.html
axiom_remote_firmware/: draw.c  draw.h  globals.c  globals.h  main.c  menu.c  menu.h  page.c  page_wb.c  page_wb_help.c  utility.h
axiom_remote_firmware/media/: media.h
axiom_remote_firmware/nbproject/: Makefile-genesis.properties  Makefile-local-default.mk
axiom_remote_visualizer/: CMakeLists.txt  README.md
axiom_remote_visualizer/source/: Main.cpp  VirtualUI.h
axiom_remote_visualizer/source/imgui_modules/: imgui_user.h
css/: default.css
data/models/: axiom_remote.glb  axiom_remote02.glb
js/: axiom_remote_firmware.wasm  bundle.js
libraries/Dictator/: Button.h  keywords.txt
(+56 files in other folders)
