CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(AXIOM_Remote_Firmware_Test)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")

FILE(GLOB FIRMWARE_SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/../Firmware/UI/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/../Firmware/GlobalSettings.cpp")

SET(TEST_SOURCES Main.cpp PainterTest.cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${TEST_SOURCES} ${FIRMWARE_SOURCES})
